modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/clusterrolebinding-invalid-subject.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: invalid-crb-subject
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-admin
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: Group
  name: system:serviceaccounts:*
