modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/clusterrolebinding-valid.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRoleBinding
metadata:
  name: valid-crb
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: d8:manage:all:viewer
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: joe@example.com
