modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/role-invalid-rules.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: invalid-role-wildcard
  namespace: default
rules:
- apiGroups: ["*"]
  resources: ["pods"]
  verbs: ["get"]
