modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/role-valid.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: Role
metadata:
  name: valid-role
  namespace: default
rules:
- apiGroups: [""]
  resources: ["pods"]
  verbs: ["get", "list"]
