modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/rolebinding-invalid-roleref.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: RoleBinding
metadata:
  name: invalid-rb-roleref
  namespace: default
roleRef:
  apiGroup: rbac.authorization.k8s.io
  kind: ClusterRole
  name: cluster-*-viewer
subjects:
- apiGroup: rbac.authorization.k8s.io
  kind: User
  name: user@example.com
