modules/015-admission-policy-engine/charts/constraint-templates/tests/allow-rbac-wildcards/test_suite.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: allow-rbac-wildcards
tests:
- name: pss-baseline
  template: ../../templates/security/allow-rbac-wildcards.yaml
  constraint: constraint.yaml
  cases:
  - name: Role without wildcards (allowed)
    inventory:
      - ../common/test_samples/ns.yaml
    object: role-valid.yaml
    assertions:
      - violations: no
  - name: Role with wildcard in rules (denied)
    inventory:
      - ../common/test_samples/ns.yaml
    object: role-invalid-rules.yaml
    assertions:
      - violations: yes
  - name: RoleBinding without wildcards (allowed)
    inventory:
      - ../common/test_samples/ns.yaml
    object: rolebinding-valid.yaml
    assertions:
      - violations: no
  - name: RoleBinding with wildcard in roleRef (denied)
    inventory:
      - ../common/test_samples/ns.yaml
    object: rolebinding-invalid-roleref.yaml
    assertions:
      - violations: yes
